Bug (Progress Bar Design) : Progress Bar Alignment CSS Adjust

--- a/scss/template/theme.scss
+++ b/scss/template/theme.scss
@@ -55,6 +55,10 @@ p{
     color: $primary-color;
 }
 
+.__cov-progress{
+    height: 4px !important;
+    background-image: radial-gradient(#0575E6 0%, #021B79 100%)!important;
+}
 
 .text-primary{
     color: $primary-color;
